Testeo WIP formulario A y B

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <mat-menu #menu="matMenu">
     <button mat-menu-item [routerLink]="['/formulario-a']" routerLinkActive="active">Formulario A</button>
     <button mat-menu-item [routerLink]="['/formulario-b']" routerLinkActive="active">Formulario B</button>
+    <button mat-menu-item [routerLink]="['/formulario-c']" routerLinkActive="active">Formulario C</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
