--- a/src/app/formulario-b/formulario-b.component.html
+++ b/src/app/formulario-b/formulario-b.component.html
@@ -1,1 +1,20 @@
 <p>formulario-b works!</p>
+
+<form [formGroup]='personaForm' (ngSubmit)=submit()>
+    <div class="datosPersona">
+        <label>Nombre
+            <input type="text" formControlName="nombre">
+        </label>
+        <label>Apellido
+            <input type="text" formControlName="apellido">
+        </label>
+        <label>Edad
+            <input type="text" formControlName="edad">
+        </label>
+        <label>Telefono
+            <input type="text" formControlName="telefono">
+        </label>
+    </div>
+
+    <button type="submit">Guardar</button>
+</form>
