--- a/src/app/formulario-b/formulario-b.component.html
+++ b/src/app/formulario-b/formulario-b.component.html
@@ -1,4 +1,4 @@
-<p>formulario-b works!</p>
+<p>Formulario B de Verificacion y Modificacion de Datos Personales</p>
 
 <form [formGroup]='personaForm' (ngSubmit)=submit()>
     <div class="datosPersona">
