Agregado tabla y botones de formulario C y agregado botones de angular material a todos los componentes

--- a/src/app/formulario-b/formulario-b.component.html
+++ b/src/app/formulario-b/formulario-b.component.html
@@ -16,5 +16,6 @@
         </label>
     </div>
 
-    <button type="submit">Guardar</button>
+    <button mat-stroked-button type="submit">Guardar</button>
+    
 </form>
