--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <h1>Componente por defecto</h1>
 
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<button  mat-stroked-button [matMenuTriggerFor]="menu">Menu</button>
 <mat-menu #menu="matMenu">
     <button mat-menu-item [routerLink]="['/formulario-a']" routerLinkActive="active">Formulario A</button>
     <button mat-menu-item [routerLink]="['/formulario-b']" routerLinkActive="active">Formulario B</button>
