--- a/src/app/formulario-a/formulario-a.component.html
+++ b/src/app/formulario-a/formulario-a.component.html
@@ -18,7 +18,7 @@
             </label>
         </div>
     
-        <button type="submit">Guardar</button>
+        <button mat-stroked-button type="submit">Guardar</button>
         
     </form>
 </div>
